Added an API to reset DB
